--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -7,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Didlydoo - Planificateur d'événements</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');</style>
 </head>
 <body>
     <header>
@@ -39,13 +38,13 @@
                     <label for="event-description">Description:</label>
                     <textarea id="event-description" name="event-description" required maxlength="256"></textarea>
                 </div>
-                <button id="idBouton" type="submit">Créer l'événement</button>
+                <div class="creation_bouton"> <!-- Ajout d'une div pour ajuster le padding du boutton -->
+                <button id="idBouton" type="submit">Créer l'événement</button></div>
             </form>
         </section>
 
         <section id="view-events">
             <h2>Événements existants</h2>
-            
             </div>
         </section>
     </main>
@@ -57,4 +56,3 @@
     <script src="js/main.js" type="module" defer></script>
 </body>
 </html>
->>>>>>> development
