--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Didlydoo - Planificateur d'événements</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');</style>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');</style>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');</style>
     <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
@@ -39,7 +40,6 @@
                 <div class="form-group">
                     <label for="event-description">Description:</label>
                     <textarea id="event-description" name="event-description" required maxlength="256"></textarea>
-                    <button id='bouton_suppression' type="submit">Supprimer</button>
                 </div>
                 <div class="creation_bouton"> <!-- Ajout d'une div pour ajuster le padding du boutton -->
                 <button id="idBouton" type="submit">Créer l'événement</button></div>
@@ -49,14 +49,14 @@
 
         <section id="view-events">
             <h2>Événements existants</h2>
-            </div>
+            <div class=conteneur></div>
         </section>
 
         
     </main>
 
     <footer>
-        <p>&copy; 2024 Didlydoo. Tous droits réservés.</p>
+        <p>Didlydoo, all rights reserved &copy; </p>
     </footer>
 
     
