ajout du GET et POST / ajout du DELETE

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
                 <div class="form-group">
                     <label for="event-description">Description:</label>
                     <textarea id="event-description" name="event-description" required maxlength="256"></textarea>
-                    <button id='bouton_suppression' type="submit">Supprimer</button>
                 </div>
-                <div class="creation_bouton"> <!-- Ajout d'une div pour ajuster le padding du boutton -->
+                <div class="creation_bouton">
                 <button id="idBouton" type="submit">Créer l'événement</button></div>
             </form>
             
@@ -49,7 +48,7 @@
 
         <section id="view-events">
             <h2>Événements existants</h2>
-            </div>
+            <div class=conteneur></div>
         </section>
 
         
