problemes dates OK

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <button type="button" id="add-date">Ajouter une date</button>
 
                     <div id="dates-container">
-                        <input type="date" id="event-date" name="event-date" required>
+                        <input class="input-ajouts-dates" type="date" id="event-date" name="event-date" required>
                     </div>
 
                 </div>
